# Agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: executor.py  office_agent.py  task_plan.py
app/api/: chat.py  files.py  memory.py
app/core/: config.py  qwen_llm.py
app/db/: database.py  models.py
app/memory/: store.py  vector_store.py
app/schemas/: chat.py  files.py  memory.py
app/services/: chat_service.py  document_service.py
app/tools/: email_tools.py  excel_tools.py  file_reader.py  json_utils.py  office_tools.py  output_tools.py
benchmarks/: __init__.py
benchmarks/office_compare/: .gitignore  README.md  __init__.py  adapters.py  baseline_requirements.txt  configure_baseline.py  generate_detailed_report.py  generate_fixtures.py  graders.py  public_data.py  public_suites.py  run_benchmark.py
benchmarks/office_compare/cases/: longchain_tasks.json  officebench_subset.json  shared_tasks.json  spreadsheetbench_verified_subset.json
docs/: current-system-guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
tests/: test_agent_executor.py  test_chat_service.py  test_document_service.py  test_file_reader.py  test_memory_store.py  test_office_compare_benchmark.py  test_office_tools.py  test_output_tools.py  test_task_plan.py
