[project]
name = "longchain-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.2.14",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
